--- a/custom.css
+++ b/custom.css
@@ -50,3 +50,7 @@ section#how-it-works-area {
 #slider-area.home-style-3 .slider-text {
     padding-top: 12em;
 }
+
+#collectorimg {
+    margin-top: -50px;
+}
